# automation-desktop

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
src/: __init__.py  api.py  automation.py  config.py  grounding.py  notepad.py  screenshot.py
tests/: test_grounding.py
